--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                <br><br> Curieuse, motivée et rigoureuse, je suis prête à m’investir pleinement dans une entreprise qui me permettra de progresser et de contribuer à des projets concrets.
             </p>
             <div class="button">
-              <a href="img/CV.pdf" download>
+              <a href="img/CV2.pdf" download>
                   <button>Télécharger mon CV</button>
               </a>
           </div>
