--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@
             </div>
         </div>
     </nav>
+    <!-- Switch de thème clair/sombre -->
+<div class="theme-toggle">
+  <label class="switch">
+    <input type="checkbox" id="theme-switch">
+    <span class="slider"></span>
+  </label>
+  <span class="mode-label">Mode sombre</span>
+</div>
+
     <!--Fin du menu de navigation-->
     <!--Page d'acceuil-->
     <section id="accueil">
@@ -297,6 +306,24 @@
           <button class="next" onclick="nextSlide('slider2')">&#10095;</button>
         </div>
       </div>
+
+      <!-- Projet 5 : Analyse réseau Vélib’ -->
+      <div class="project-card">
+        <h3>Exploration algorithmique et données spatiales – Vélib'</h3>
+        <p>Analyse du réseau Vélib’ à partir de données Open Data. Implémentation en Python d’algorithmes avancés (Delaunay, Kruskal), modélisation en graphe, traitement de données JSON et visualisation interactive avec Folium.</p>
+
+        <div class="image-slider" id="slider5">
+          <img src="img/60.png" class="active" alt="Carte Delaunay 1">
+          <img src="img/61.png" alt="Analyse réseau Vélib">
+          <img src="img/62.png" alt="Analyse réseau Vélib">
+          <img src="img/63.png" alt="Analyse réseau Vélib">
+          <img src="img/64.png" alt="Analyse réseau Vélib5">
+          <img src="img/65.png" alt="Analyse réseau Vélib">
+          <button class="prev" onclick="prevSlide('slider5')">&#10094;</button>
+          <button class="next" onclick="nextSlide('slider5')">&#10095;</button>
+        </div>
+      </div>
+
   
       <!-- Projet 3 : Chez Chaima -->
       <div class="project-card">
