--- a/index.html
+++ b/index.html
@@ -131,6 +131,9 @@
             <a href="https://fr.wikipedia.org/wiki/C_(langage)" target="_blank">
               <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/c/c-original.svg" alt="C">
             </a>
+              <a href="https://www.php.net/" target="_blank">
+              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/php/php-original.svg" alt="PHP">
+            </a>
             <a href="https://www.mysql.com/fr/" target="_blank">
               <img src="img/9.png" alt="SQL">
             </a>
