--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
               <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/c/c-original.svg" alt="C">
             </a>
               <a href="https://www.php.net/" target="_blank">
-              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/php/php-original.svg" alt="PHP">
+              <img src="https://fr.wikipedia.org/wiki/PHP" alt="PHP">
             </a>
             <a href="https://www.mysql.com/fr/" target="_blank">
               <img src="img/9.png" alt="SQL">
