Replace Libera Sante slider with video 11

--- a/index.html
+++ b/index.html
@@ -284,22 +284,8 @@
         <h3>Libéra Santé</h3>
         <p>Site web d'analyse des dépenses de santé libérale en France. Développement avec Flask, SQLite, Matplotlib.</p>
   
-        <div class="image-slider" id="slider1">
-          <img src="img/11.png" class="active" alt="Libéra Santé 1">
-          <img src="img/13.png" alt="Libéra Santé 3">
-          <img src="img/14.png" alt="Libéra Santé 4">
-          <img src="img/15.png" alt="Libéra Santé 5">
-          <img src="img/16.png" alt="Libéra Santé 6">
-          <img src="img/17.png" alt="Libéra Santé 7">
-          <img src="img/18.png" alt="Libéra Santé 8">
-          <img src="img/19.png" alt="Libéra Santé 9">
-          <img src="img/20.png" alt="Libéra Santé 10">
-          <img src="img/21.png" alt="Libéra Santé 11">
-          <img src="img/22.png" alt="Libéra Santé 12">
-          <img src="img/23.png" alt="Libéra Santé 13">
-          <img src="img/24.png" alt="Libéra Santé 14">
-          <button class="prev" onclick="prevSlide('slider1')">&#10094;</button>
-          <button class="next" onclick="nextSlide('slider1')">&#10095;</button>
+        <div class="project-media">
+          <video src="img/11.mp4" controls preload="metadata"></video>
         </div>
       </div>
   
