Ajoute le projet Hydroclair

--- a/index.html
+++ b/index.html
@@ -279,6 +279,16 @@
         </div>
 
   
+      <!-- Projet : Hydroclair -->
+      <div class="project-card">
+        <h3>Hydroclair – Consultation de la qualité de l’eau potable</h3>
+        <p>Application web développée en équipe qui permet de consulter la qualité de l’eau potable selon la localisation, avec un backend en Python (MVC), une base de données locale et une interface interactive en HTML, CSS et JavaScript.</p>
+
+        <div class="project-media">
+          <video src="img/12.mp4" controls preload="metadata"></video>
+        </div>
+      </div>
+
       <!-- Projet 1 : Libéra Santé -->
       <div class="project-card">
         <h3>Libéra Santé</h3>
