Remplace les galeries projets par des videos

--- a/index.html
+++ b/index.html
@@ -304,25 +304,8 @@
         <h3>INICE – RSE IKEA</h3>
         <p>Étude et site web sur la RSE d'IKEA, développement en HTML, CSS et JavaScript.</p>
   
-        <div class="image-slider" id="slider2">
-          <img src="img/25.png" class="active" alt="INICE 1">
-          <img src="img/26.png" alt="INICE 2">
-          <img src="img/27.png" alt="INICE 3">
-          <img src="img/28.png" alt="INICE 4">
-          <img src="img/29.png" alt="INICE 5">
-          <img src="img/30.png" alt="INICE 6">
-          <img src="img/31.png" alt="INICE 7">
-          <img src="img/32.png" alt="INICE 8">
-          <img src="img/33.png" alt="INICE 9">
-          <img src="img/34.png" alt="INICE 10">
-          <img src="img/35.png" alt="INICE 11">
-          <img src="img/36.png" alt="INICE 12">
-          <img src="img/37.png" alt="INICE 13">
-          <img src="img/38.png" alt="INICE 13">
-          <img src="img/39.png" alt="INICE 14">
-          
-          <button class="prev" onclick="prevSlide('slider2')">&#10094;</button>
-          <button class="next" onclick="nextSlide('slider2')">&#10095;</button>
+        <div class="project-media">
+          <video src="img/15.mp4" controls preload="metadata"></video>
         </div>
       </div>
 
@@ -331,15 +314,8 @@
         <h3>Exploration algorithmique et données spatiales – Vélib'</h3>
         <p>Analyse du réseau Vélib’ à partir de données Open Data. Implémentation en Python d’algorithmes avancés (Delaunay, Kruskal), modélisation en graphe, traitement de données JSON et visualisation interactive avec Folium.</p>
 
-        <div class="image-slider" id="slider5">
-          <img src="img/60.png" class="active" alt="Carte Delaunay 1">
-          <img src="img/61.png" alt="Analyse réseau Vélib">
-          <img src="img/62.png" alt="Analyse réseau Vélib">
-          <img src="img/63.png" alt="Analyse réseau Vélib">
-          <img src="img/64.png" alt="Analyse réseau Vélib5">
-          <img src="img/65.png" alt="Analyse réseau Vélib">
-          <button class="prev" onclick="prevSlide('slider5')">&#10094;</button>
-          <button class="next" onclick="nextSlide('slider5')">&#10095;</button>
+        <div class="project-media">
+          <video src="img/14.mp4" controls preload="metadata"></video>
         </div>
       </div>
 
@@ -349,18 +325,8 @@
         <h3>Chez Chaima</h3>
         <p>Site web d'un restaurant fictif. Concept, menu, identité visuelle, développement du site web.</p>
   
-        <div class="image-slider" id="slider3">
-          <img src="img/40.png" class="active" alt="Chez Chaima 1">
-          <img src="img/41.png" alt="Chez Chaima 2">
-          <img src="img/42.png" alt="Chez Chaima 3">
-          <img src="img/43.png" alt="Chez Chaima 4">
-          <img src="img/44.png" alt="Chez Chaima 5">
-          <img src="img/45.png" alt="Chez Chaima 6">
-          <img src="img/46.png" alt="Chez Chaima 7">
-          <img src="img/47.png" alt="Chez Chaima 8">
-          <img src="img/48.png" alt="Chez Chaima 9">
-          <button class="prev" onclick="prevSlide('slider3')">&#10094;</button>
-          <button class="next" onclick="nextSlide('slider3')">&#10095;</button>
+        <div class="project-media">
+          <video src="img/13.mp4" controls preload="metadata"></video>
         </div>
       </div>
       </div>
